--- a/github.html
+++ b/github.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/github-styles.css" type="text/css" />
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/github-information.js"></script>
     <title>Rosie</title>
 </head>
+
 <body>
     <header>
         <div class="row no-gutters">
-            <a href=index.html class="col-md-4 logo">
+            <a href="index.html" class="col-md-4 logo">
                 
             </a>
             <div class="col-md-8">
@@ -50,79 +56,76 @@
             </div>
         </div>
     </header>
-    <section>
-        <div class="container-fluid">
-            <div class="row bg-color-contact">
-                <div class="col">
-                    <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
-                    <h5 class="uppercase text-center">Let's work together!</h5>
-                    <div class="center-form">
-                        <form>
-                            <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required/>
-                            <input type="text" name="email" id="emailaddress" class="form-control" placeholder="Project description" required/>
-                            <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Email" required/></textarea>
-                            <div class="form-row text-center">
-                                <div class="col">
-                                    <button type="submit" class="btn btn-secondary">Send Project Request</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+    <section class="container-fluid">
+        <div class="row bg-color-contact">
+            <div class="col">
+                <h3 class="contact-heading uppercase text-center">View My GitHub Projects</h3>
+                <h5 class="uppercase text-center">You can also search on other user profiles</h5>
+
+                <div class="center-form">
+                    <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()" />
+                    <div id="gh-user-data"></div>
+                    <div id="gh-repo-data"></div>
+
                 </div>
+
             </div>
         </div>
+
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
-            <div class="col sm-4">
+            <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
-                <p class="inline-block"> Full Stack Web Developer. Skilled in everything from HTML to Heroku. Strong capacity for structural and design thinking.</p>
+                <p class="inline-block">
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
+                </p>
             </div>
-            <div class="col sm-4">
+            <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
-                    Need a printable version of my CV? Dowload it here.
+                    Need a printable version of my CV? Download it here.
                     <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
-                        <span class="sr-only">Download CV link</span>
+                        <span class="sr-only">Download link.</span>
                     </a>
                 </p>
             </div>
-            <div class="col sm-4">
+            <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
-                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">YouTube</span>
                         </a>
@@ -130,6 +133,8 @@
                 </ul>
             </div>
         </div>
+
     </footer>
 </body>
+
 </html>
