--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
         <link rel="stylesheet" href="static/css/style.css" type="text/css" />
@@ -9,38 +10,51 @@
     <body>
         <header class="container-fluid">
             <div class="row">
-                <a href="index.html">
-                    <div class="col-md-4 logo"></div>
+                <a class="no-gutter col-md-4" href="index.html">
+                    <div class="logo"></div>
                 </a>
                 <div class="col-md-8">
                     <div class="row bg-color-name-title">
                         <div class="heading">
-                            <h1 class="name">Rosie Odenkirk</h1>
+                            <h1 class="name">Seán O'Riordan</h1>
                             <h2 class="title">Full Stack Developer</h2>
                         </div>
                     </div>
                     <div class="row">
-                        <ul id="nav" class="list-inline clearfix">
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem">
-                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden='true'></i><span>Home</span></a>
+                        <ul id="nav" class="list-group list-group-horizontal">
+                            <li class="list-item col-xs-6 col-sm-2 ui-menu-color-home menuitem">
+                                <a href="index.html" class="hvr-sweep-to-bottom">
+                                    <i class="fa fa-home" aria-hidden="true"></i><span>Home</span>
+                                </a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
-                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                            <li class="list-item col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
+                                <a href="resume.html" class="hvr-sweep-to-bottom">
+                                    <i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span>
+                                </a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
+                            <li class="list-item col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
+                                <a href="interests.html" class="hvr-sweep-to-bottom">
+                                    <i class="fa fa-users" aria-hidden="true"></i><span>Interests</span>
+                                </a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
-                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                            <li class="list-item col-xs-6 col-sm-2 ui-menu-color-github menuitem">
+                                <a href="github.html" class="hvr-sweep-to-bottom">
+                                    <i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span>
+                                </a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
-                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                            <li class="list-item col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
+                                <a href="contact.html" class="hvr-sweep-to-bottom">
+                                    <i class=" fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span>
+                                </a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                            <li class="list-item col-xs-6 col-sm-2 ui-menu-color-download menuitem">
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom">
+                                    <i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span>
+                                </a>
                             </li>
                         </ul>
                     </div>
+                    
                 </div>
             </div>
         </header>
@@ -113,25 +127,25 @@
                                 <span class="progress-type">HTML / HTML5</span>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                                     <span class="sr-only"> 80% complete</span>
                                 </div>
                                 <span class="progress-type">CSS / CSS3</span>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
                                     <span class="sr-only"> 70% complete</span>
                                 </div>
                                 <span class="progress-type">JavaScript / jQuery</span>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                                     <span class="sr-only"> 80% complete</span>
                                 </div>
                                 <span class="progress-type">Python / Django</span>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                                     <span class="sr-only"> 80% complete</span>
                                 </div>
                                 <span class="progress-type">SQL / NoSQL</span>
@@ -158,13 +172,13 @@
                 </div>
                 <div class="col-sm-4">
                     <h5 class="uppercase general-sub">My Social</h5>
-                    <ul class="list-inline social-links">
-                        <li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a target="_blank" href="#"><i class="fa fa-pinterest"></i></a></li>
-                        <li><a target="_blank" href="#"><i class="fa fa-instagram"></i></a></li>
-                        <li><a target="_blank" href="#"><i class="fa fa-youtube"></i></a></li>
+                    <ul class="list-group list-group-horizontal social-links">
+                        <li class="list-item"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li class="list-item"><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li class="list-item"><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li class="list-item"><a target="_blank" href="#"><i class="fa fa-pinterest"></i></a></li>
+                        <li class="list-item"><a target="_blank" href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li class="list-item"><a target="_blank" href="#"><i class="fa fa-youtube"></i></a></li>
                     </ul>
                 </div>
             </div>
